cassandra/cassandra-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra
  name: cassandra
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None
  ports:
    - port: 9042
      name: cassandra
    - name: jmx
      port: 7199
  selector:
    app: cassandra
